--- a/packages/simple-shared-data/package.json
+++ b/packages/simple-shared-data/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simple-shared-data",
+  "name": "@dmitry/simple-shared-data",
   "version": "0.0.0",
   "description": "> TODO: description",
   "author": "Dmitry Nezvinskyi <nezvinskyi@gmail.com>",
