--- a/packages/simple-express-app/package.json
+++ b/packages/simple-express-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simple-express-app",
+  "name": "@dmitry/simple-express-app",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
