--- a/packages/simple-react-app/package.json
+++ b/packages/simple-react-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simple-react-app",
+  "name": "@dmitry/simple-react-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
